--- a/action.yml
+++ b/action.yml
@@ -39,6 +39,10 @@ inputs:
   docker_tlskey:
     description: Path to the Docker client private key
     required: false
+  tarball:
+    description: Is the image to be scanned in tarball (yes / no)
+    default: no
+    required: false
 outputs:
   results_file:
     description: File containing scan results
